--- a/misc/goodfellow_deeplearning.ipynb
+++ b/misc/goodfellow_deeplearning.ipynb
@@ -37,7 +37,9 @@
     "    nervous system of a frog\n",
     "\n",
     "![number of connections per neuron](images/bengio_number_of_neurons.png)\n",
-    "- Goodfellow-et-al-2016"
+    "- Goodfellow-et-al-2016\n",
+    "\n",
+    "@book{Goodfellow-et-al-2016, title={Deep Learning}, author={Ian Goodfellow and Yoshua Bengio and Aaron Courville}, publisher={MIT Press}, note={\\url{http://www.deeplearningbook.org}}, year={2016} }"
    ]
   }
  ],
