introduction notes finished summary of introduction chapter

--- a/misc/goodfellow_deeplearning.ipynb
+++ b/misc/goodfellow_deeplearning.ipynb
@@ -39,7 +39,10 @@
     "![number of connections per neuron](images/bengio_number_of_neurons.png)\n",
     "- Goodfellow-et-al-2016\n",
     "\n",
-    "@book{Goodfellow-et-al-2016, title={Deep Learning}, author={Ian Goodfellow and Yoshua Bengio and Aaron Courville}, publisher={MIT Press}, note={\\url{http://www.deeplearningbook.org}}, year={2016} }"
+    "@book{Goodfellow-et-al-2016, title={Deep Learning}, author={Ian Goodfellow and Yoshua Bengio and Aaron Courville}, publisher={MIT Press}, note={\\url{http://www.deeplearningbook.org}}, year={2016} }\n",
+    "\n",
+    "- LSTM sequence model (Recurrent NN) are used for modelling relationships between sequences and other sequences\n",
+    "- Reinforcement learning, amachine learns to perform by trial and error without human guidance\n"
    ]
   }
  ],
