linear algebra started writing the basic linear algebra notes

--- a/math/linear_algebra/goodfellow_deeplearning.ipynb
+++ b/math/linear_algebra/goodfellow_deeplearning.ipynb
@@ -12,8 +12,19 @@
     "## Chapter 2 - Linear Algebra <br>\n",
     "### 2.1 - Scalars, Vectors, Matricies and Tensors\n",
     "\n",
+    "Scalar - a single number <br>\n",
     "\n",
+    "Vector - an array of numbers arranged in order <br>\n",
+    "$$ \\begin{bmatrix} 1 \\\\ 5 \\\\ -4\\end{bmatrix} $$ <br>\n",
+    "- think of as identifying points in space, each element is a coordinate <br>\n",
     "\n",
+    "Matrix - 2-D array of numbers, each element has 2 indices <br>\n",
+    "$$ \\begin{bmatrix} 1 & 2 & 8 \\\\ 5 & -1 & 0 \\\\ -4 & 1 & 1\\end{bmatrix} $$ <br>\n",
+    "\n",
+    "Tensor - Array with more than 2 axes\n",
+    "\n",
+    "Transpose - mirror image agross a the main diagonal (running down and to the right) <br>\n",
+    "$$ (A^T)_{i,j} = A_{j,i}$$\n",
     "\n"
    ]
   }
