Linear Algebra added in reference

--- a/math/linear_algebra/goodfellow_deeplearning.ipynb
+++ b/math/linear_algebra/goodfellow_deeplearning.ipynb
@@ -25,7 +25,17 @@
     "\n",
     "Transpose - mirror image agross a the main diagonal (running down and to the right) <br>\n",
     "$$ (A^T)_{i,j} = A_{j,i}$$\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "## References\n",
+    "@book{Goodfellow-et-al-2016,\n",
+    "    title={Deep Learning},\n",
+    "    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},\n",
+    "    publisher={MIT Press},\n",
+    "    note={\\url{http://www.deeplearningbook.org}},\n",
+    "    year={2016}\n",
+    "}\n"
    ]
   }
  ],
