linear algebra finished the intro notes formatting and formulas for linear algebra

--- a/math/linear_algebra/goodfellow_deeplearning.ipynb
+++ b/math/linear_algebra/goodfellow_deeplearning.ipynb
@@ -12,21 +12,27 @@
     "## Chapter 2 - Linear Algebra <br>\n",
     "### 2.1 - Scalars, Vectors, Matricies and Tensors\n",
     "\n",
-    "Scalar - a single number <br>\n",
+    "__Scalar__ - a single number <br>\n",
     "\n",
-    "Vector - an array of numbers arranged in order <br>\n",
+    "__Vector__ - an array of numbers arranged in order <br>\n",
     "$$ \\begin{bmatrix} 1 \\\\ 5 \\\\ -4\\end{bmatrix} $$ <br>\n",
     "- think of as identifying points in space, each element is a coordinate <br>\n",
     "\n",
-    "Matrix - 2-D array of numbers, each element has 2 indices <br>\n",
+    "__Matrix__ - 2-D array of numbers, each element has 2 indices <br>\n",
     "$$ \\begin{bmatrix} 1 & 2 & 8 \\\\ 5 & -1 & 0 \\\\ -4 & 1 & 1\\end{bmatrix} $$ <br>\n",
     "\n",
-    "Tensor - Array with more than 2 axes\n",
+    "__Tensor__ - Array with more than 2 axes\n",
     "\n",
-    "Transpose - mirror image agross a the main diagonal (running down and to the right) <br>\n",
+    "__Transpose__ - mirror image across a the main diagonal (running down and to the right) <br>\n",
     "$$ (A^T)_{i,j} = A_{j,i}$$\n",
     "\n",
+    "- Scalar is a matrix with only a single entry\n",
+    "- Matrices with the same dimensions can be added together by adding the elements with the same coordinates\n",
+    "- A scalar can be added or multiplied to a matrix by performing the operation elementwise\n",
     "\n",
+    "__Broadcasting__ - addition of a matrix and a vector <br>\n",
+    "$$ C_{i,j} = A_{i,j} + b_j $$ <br>\n",
+    "    ie. vector b is added to each row of matrix C \n",
     "\n",
     "## References\n",
     "@book{Goodfellow-et-al-2016,\n",
