--- a/math/linear_algebra/goodfellow_deeplearning.ipynb
+++ b/math/linear_algebra/goodfellow_deeplearning.ipynb
@@ -34,6 +34,9 @@
     "$$ C_{i,j} = A_{i,j} + b_j $$ <br>\n",
     "    ie. vector b is added to each row of matrix C \n",
     "\n",
+    "\n",
+    "### 2.2 Multiplying Matrices and Vectors\n",
+    "\n",
     "## References\n",
     "@book{Goodfellow-et-al-2016,\n",
     "    title={Deep Learning},\n",
