--- a/math/linear_algebra/goodfellow_deeplearning.ipynb
+++ b/math/linear_algebra/goodfellow_deeplearning.ipynb
@@ -36,6 +36,8 @@
     "\n",
     "\n",
     "### 2.2 Multiplying Matrices and Vectors\n",
+    "If A is shape *m* x *n* and B is *n* x *p*, then $ A * B $ will produce a matix C with dimensions *m* x *p*\n",
+    "\n",
     "\n",
     "## References\n",
     "@book{Goodfellow-et-al-2016,\n",
