linear algebra edits

--- a/math/linear_algebra/goodfellow_deeplearning.ipynb
+++ b/math/linear_algebra/goodfellow_deeplearning.ipynb
@@ -36,8 +36,25 @@
     "\n",
     "\n",
     "### 2.2 Multiplying Matrices and Vectors\n",
-    "If A is shape *m* x *n* and B is *n* x *p*, then $ A * B $ will produce a matix C with dimensions *m* x *p*\n",
+    "Multiplication - If A is shape *m* x *n* and B is *n* x *p*, then $ A * B $ will produce a matix $C$ with dimensions *m* x *p*\n",
+    " - number of columns in $A$ must equal number of rows in $B$ for product to be defined<br>\n",
+    "$$ C_{i,j} = \\sum_kA_{i,k}B_{k,j} $$\n",
     "\n",
+    "Element-wise product (Hadamard product) - product of the individual elements\n",
+    "\n",
+    "Matrix multiplication is distributive:\n",
+    "$$ A(B + C) = AB + AC $$\n",
+    "\n",
+    "Matrix multiplication is associative:\n",
+    "$$ A(BC) = (AB)C $$\n",
+    "\n",
+    "But it is not commutative $ AB = BA $ does not always hold\n",
+    "\n",
+    "The dot product between two vectors is however commutative\n",
+    "$$ x^Ty = y^Tx $$\n",
+    "\n",
+    "Transpose of a matrix product has a simple form:\n",
+    "$$ (AB)^T = B^TA^T $$\n",
     "\n",
     "## References\n",
     "@book{Goodfellow-et-al-2016,\n",
