linear algebra edits

--- a/math/linear_algebra/goodfellow_deeplearning.ipynb
+++ b/math/linear_algebra/goodfellow_deeplearning.ipynb
@@ -56,6 +56,10 @@
     "Transpose of a matrix product has a simple form:\n",
     "$$ (AB)^T = B^TA^T $$\n",
     "\n",
+    "A system of linear equations\n",
+    "$$ **Ax = b** $$\n",
+    "\n",
+    "\n",
     "## References\n",
     "@book{Goodfellow-et-al-2016,\n",
     "    title={Deep Learning},\n",
