--- a/dive_into_deep_learning/Preliminaries/data_manipulation.ipynb
+++ b/dive_into_deep_learning/Preliminaries/data_manipulation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from mxnet import nd"
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -332,13 +332,433 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 18
+     "execution_count": 4
     }
    ],
    "source": [
     "x = nd.arange(12).reshape((3, 4))\n",
     "y = nd.array([[2, 1, 4, 5], [1, 2, 3, 4], [4, 3, 2, 1]])\n",
     "nd.dot(x, y.T)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Merging Matrices\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\n[[ 0.  1.  2.  3.]\n [ 4.  5.  6.  7.]\n [ 8.  9. 10. 11.]\n [ 2.  1.  4.  5.]\n [ 1.  2.  3.  4.]\n [ 4.  3.  2.  1.]]\n<NDArray 6x4 @cpu(0)>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "# merge along rows\n",
+    "nd.concat(x, y, dim=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\n[[ 0.  1.  2.  3.  2.  1.  4.  5.]\n [ 4.  5.  6.  7.  1.  2.  3.  4.]\n [ 8.  9. 10. 11.  4.  3.  2.  1.]]\n<NDArray 3x8 @cpu(0)>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "# merge along columns\n",
+    "nd.concat(x, y, dim=1)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Other operations"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# turn into logical array\n",
+    "x == y\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\n[66.]\n<NDArray 1 @cpu(0)>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "# sum all elements in an array\n",
+    "x.sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "22.494442"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "# transform from a single element ND array to a python scalar\n",
+    "x.norm().asscalar()\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Broadcasting"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\n[[0. 1.]\n [1. 2.]\n [2. 3.]]\n<NDArray 3x2 @cpu(0)>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "# nd arrays handle adding different sized matrices by broadcasting them to a larger matrix\n",
+    "# (3x2 in this case) it will replicate matrix a's columns and matrix b's rows and then add elementwise \n",
+    "a = nd.arange(3).reshape((3, 1))\n",
+    "b = nd.arange(2).reshape((1, 2))\n",
+    "a + b\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Indexing and Slicing"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "\n[[ 0.  1.  2.  3.]\n [ 4.  5.  6.  7.]\n [ 8.  9. 10. 11.]]\n<NDArray 3x4 @cpu(0)>\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "data": {
+      "text/plain": "\n[[ 4.  5.  6.  7.]\n [ 8.  9. 10. 11.]]\n<NDArray 2x4 @cpu(0)>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "# indexes from 0 and selects the first but not the last element, for example the below will\n",
+    "# select the 2nd and 3rd elements\n",
+    "print(x)\n",
+    "x[1:3]\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\n[[ 0.  1.  2.  3.]\n [ 4.  5.  9.  7.]\n [ 8.  9. 10. 11.]]\n<NDArray 3x4 @cpu(0)>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "# Can write elements to the matrix\n",
+    "x[1, 2] = 9\n",
+    "x\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\n[[12. 12. 12. 12.]\n [12. 12. 12. 12.]\n [ 8.  9. 10. 11.]]\n<NDArray 3x4 @cpu(0)>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "# can assign multiple values\n",
+    "x[0:2, :] = 12\n",
+    "x\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Saving Memory\n",
+    "when running operations new memory is allocated to store the result, ie y = x + y allocates new memory to store the \n",
+    "results\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "4755225120\n4755018696\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "before = id(y)\n",
+    "y = y + x\n",
+    "after = id(y)\n",
+    "print(before)\n",
+    "print(after)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "id(z) 4755018640\nid(z) 4755018640\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "# To allocate memory in-place in mxnet you use the slice [:] notation, as show in example\n",
+    "z = y.zeros_like()\n",
+    "print('id(z)', id(z))\n",
+    "z[:] = x + y\n",
+    "print('id(z)', id(z))\n",
+    "\n",
+    "# this still however uses a temporary buffer to store x + y"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "id(z) 4755018640\nid(z) 4755018640\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "# to avoid using a temporary buffer you can envoke the underlying ndarray operation and by specifying the out keyword \n",
+    "# argument, which every ndarray operation contains\n",
+    "print('id(z)', id(z))\n",
+    "nd.elemwise_add(x, y, out=z)\n",
+    "print('id(z)', id(z))\n",
+    "\n",
+    "# you can also use += to reduce the overhead of memory operations, for example x += y as opposed to x = x + y"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Transfomation of NDArray and NumPy\n",
+    "Converted arrays do not share memory\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "<class 'numpy.ndarray'>\n<class 'mxnet.ndarray.ndarray.NDArray'>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = x.asnumpy()\n",
+    "print(type(a))\n",
+    "b = nd.array(a)\n",
+    "print(type(b))\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
