linear algebra chapter

--- a/dive_into_deep_learning/Preliminaries/linear_algebra.ipynb
+++ b/dive_into_deep_learning/Preliminaries/linear_algebra.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from mxnet import nd"
@@ -111,7 +111,70 @@
    ],
    "source": [
     "x = nd.arange(4)\n",
-    "print('x = ', x)\n",
+    "print('x = ', x)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\n[3.]\n<NDArray 1 @cpu(0)>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "# you can index into any vector\n",
+    "x[3]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Length, Dimensionality and Shape\n",
+    "vector $\\mathbf{x}$ consists of $n$ scalars and can be expressed as $\\mathbf{x} \\in \\mathcal{R}^n$. Length and dimension \n",
+    "and synonymous in describing vectors. Length can be accessed with ``len()`` function or using `.shape` attribute"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(4,)"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "x.shape\n",
     "\n"
    ],
    "metadata": {
@@ -119,6 +182,419 @@
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Matrices\n",
+    "- Vectors generalize scalars from order $0$ to order $1$.\n",
+    "- Matrices generalize vectors from $1D$ to $2D$.\n",
+    "- Matrices are denoted with capitals ($A$, $B$, $C$) and are arrays with 2 axes.\n",
+    "- Each entry $a_{ij}$ belongs to the $i$-th row and $j$-th column.\n",
+    "\n",
+    "$$A=\\begin{pmatrix}\n",
+    " a_{11} & a_{12} & \\cdots & a_{1m} \\\\\n",
+    " a_{21} & a_{22} & \\cdots & a_{2m} \\\\\n",
+    "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    " a_{n1} & a_{n2} & \\cdots & a_{nm} \\\\\n",
+    "\\end{pmatrix}$$\n",
+    "\n",
+    "to create specify a shape with two components `(n,m)`"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "\n[[ 0.  1.  2.  3.]\n [ 4.  5.  6.  7.]\n [ 8.  9. 10. 11.]\n [12. 13. 14. 15.]\n [16. 17. 18. 19.]]\n<NDArray 5x4 @cpu(0)>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "A = nd.arange(20).reshape((5,4))\n",
+    "print(A)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- can access the scalar elements $a_{ij}$ of a matrix $A$ by specifying the indices for the row ($i$) and column ($j$).\n",
+    "- Can transpose with `T`.\n",
+    "- if $B = A^T$, then $b_{ij} = a_{ji}$ for any $i$ and $j$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "\n[[ 0.  4.  8. 12. 16.]\n [ 1.  5.  9. 13. 17.]\n [ 2.  6. 10. 14. 18.]\n [ 3.  7. 11. 15. 19.]]\n<NDArray 4x5 @cpu(0)>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "print(A.T)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Tensors\n",
+    "Generic way of discussing arrays with arbitrary number of axes, vectors are 1st order tensors Matrices are 2nd order."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "X.shape =  (2, 3, 4)\nX =  \n[[[ 0.  1.  2.  3.]\n  [ 4.  5.  6.  7.]\n  [ 8.  9. 10. 11.]]\n\n [[12. 13. 14. 15.]\n  [16. 17. 18. 19.]\n  [20. 21. 22. 23.]]]\n<NDArray 2x3x4 @cpu(0)>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "X = nd.arange(24).reshape((2, 3, 4))\n",
+    "print('X.shape = ', X.shape)\n",
+    "print('X = ', X)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Basic properties of tensor Arithmetic\n",
+    "- the results of an element-wise operation on operands with the same shape, is a resulting tensor of the same shape.\n",
+    "- Multiplication by a scalar also produces a tensor of the same shape.\n",
+    "- In math, given two tensors $X$ and $Y$ with the same shape, $\\alpha X + Y$ has the same shape (numerical mathematicians call this the AXPY operation)."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "(3,)\n(3,)\n(3,)\n(3,)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "x = nd.ones(3)\n",
+    "y = nd.zeros(3)\n",
+    "print(x.shape)\n",
+    "print(y.shape)\n",
+    "print((a * x).shape)\n",
+    "print((a * x + y).shape)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Sums and Means\n",
+    "- expressed using $\\sum$ symbol.\n",
+    "- the sum of the elements in a vector $\\mathbf{u}$ of length $d$,\n",
+    "we can write $\\sum_{i=1}^d u_i$\n",
+    "- can use ``nd.sum()``"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "\n[1. 1. 1.]\n<NDArray 3 @cpu(0)>\n\n[3.]\n<NDArray 1 @cpu(0)>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "print(x)\n",
+    "print(nd.sum(x))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- The sum of the elements of an $m \\times n$ matrix $A$ is written $\\sum_{i=1}^{m} \\sum_{j=1}^{n} a_{ij}$."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "\n[[ 0.  1.  2.  3.]\n [ 4.  5.  6.  7.]\n [ 8.  9. 10. 11.]\n [12. 13. 14. 15.]\n [16. 17. 18. 19.]]\n<NDArray 5x4 @cpu(0)>\n\n[190.]\n<NDArray 1 @cpu(0)>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "print(A)\n",
+    "print(nd.sum(A))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- Calculate the mean by dividing the sum by the number of elements\n",
+    "- For a vector: $\\mathbf{u}$ as $\\frac{1}{d} \\sum_{i=1}^{d} u_i$\n",
+    "- For a matrix: $A$ as  $\\frac{1}{n \\cdot m} \\sum_{i=1}^{m} \\sum_{j=1}^{n} a_{ij}$.\n",
+    "- use ``nd.mean()`` on any tensor"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "\n[9.5]\n<NDArray 1 @cpu(0)>\n\n[9.5]\n<NDArray 1 @cpu(0)>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "print(nd.mean(A))\n",
+    "print(nd.sum(A) / A.size)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Dot Products\n",
+    "Given two vectors $\\mathbf{u}$ and $\\mathbf{v}$, the dot product $\\mathbf{u}^T \\mathbf{v}$ is a sum over the products of the corresponding elements: $\\mathbf{u}^T \\mathbf{v} = \\sum_{i=1}^{d} u_i \\cdot v_i$.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "\n[0. 1. 2. 3.]\n<NDArray 4 @cpu(0)> \n[1. 1. 1. 1.]\n<NDArray 4 @cpu(0)> \n[6.]\n<NDArray 1 @cpu(0)>\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "data": {
+      "text/plain": "\n[6.]\n<NDArray 1 @cpu(0)>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "x = nd.arange(4)\n",
+    "y = nd.ones(4)\n",
+    "print(x, y, nd.dot(x, y))\n",
+    "\n",
+    "# For two vectors this is the same as \n",
+    "nd.sum(x * y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- given a set of weights $\\mathbf{w}$, the weighted sum of some values ${u}$ could be expressed as the dot product $\\mathbf{u}^T \\mathbf{w}$. When the weights are non-negative and sum to one $\\left(\\sum_{i=1}^{d} {w_i} = 1\\right)$, the dot product expresses a *weighted average*\n",
+    "\n",
+    "## Matrix-vector products\n",
+    "\n",
+    "$$A=\\begin{pmatrix}\n",
+    " a_{11} & a_{12} & \\cdots & a_{1m} \\\\\n",
+    " a_{21} & a_{22} & \\cdots & a_{2m} \\\\\n",
+    "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    " a_{n1} & a_{n2} & \\cdots & a_{nm} \\\\\n",
+    "\\end{pmatrix},\\quad\\mathbf{x}=\\begin{pmatrix}\n",
+    " x_{1}  \\\\\n",
+    " x_{2} \\\\\n",
+    "\\vdots\\\\\n",
+    " x_{m}\\\\\n",
+    "\\end{pmatrix} $$\n",
+    "\n",
+    "you can express a matrix by its row vectors:\n",
+    "\n",
+    "$$A=\n",
+    "\\begin{pmatrix}\n",
+    "\\mathbf{a}^T_{1} \\\\\n",
+    "\\mathbf{a}^T_{2} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\mathbf{a}^T_n \\\\\n",
+    "\\end{pmatrix},$$\n",
+    "\n",
+    "where each $\\mathbf{a}^T_{i} \\in \\mathbb{R}^{m}$\n",
+    "is a row vector representing the $i$-th row of the matrix $A$.\n",
+    "\n",
+    "Then the matrix vector product $\\mathbf{y} = A\\mathbf{x}$ is simply a column vector $\\mathbf{y} \\in \\mathbb{R}^n$ where each entry $y_i$ is the dot product $\\mathbf{a}^T_i \\mathbf{x}$.\n",
+    "\n",
+    "$$A\\mathbf{x}=\n",
+    "\\begin{pmatrix}\n",
+    "\\mathbf{a}^T_{1}  \\\\\n",
+    "\\mathbf{a}^T_{2}  \\\\\n",
+    " \\vdots  \\\\\n",
+    "\\mathbf{a}^T_n \\\\\n",
+    "\\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    " x_{1}  \\\\\n",
+    " x_{2} \\\\\n",
+    "\\vdots\\\\\n",
+    " x_{m}\\\\\n",
+    "\\end{pmatrix}\n",
+    "= \\begin{pmatrix}\n",
+    " \\mathbf{a}^T_{1} \\mathbf{x}  \\\\\n",
+    " \\mathbf{a}^T_{2} \\mathbf{x} \\\\\n",
+    "\\vdots\\\\\n",
+    " \\mathbf{a}^T_{n} \\mathbf{x}\\\\\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "- Can think of multiplication by a matrix $A\\in \\mathbb{R}^{n \\times m}$ as a transformation that projects vectors from $\\mathbb{R}^{m}$ to $\\mathbb{R}^{n}$.\n",
+    "- We can represent rotations as multiplications by a square matrix. And can also use matrix-vector products to describe the calculations of each layer in a neural network.\n",
+    "- In code with ``ndarray``, we use the same ``nd.dot()`` function as for dot products. \n",
+    "- ``nd.dot(A, x)`` with a matrix ``A`` and a vector ``x``, MXNet knows to perform a matrix-vector product. Column dimension of ``A`` must be the same as the dimension of ``x``."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "nd.dot(A, x)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
